@@ -15,6 +15,11 @@
   <name>Connector :: Server</name>
   <description>A Spring Boot server runtime for an ILPv4 Connector.</description>
 
+  <properties>
+    <container.image>interledger4j/java-ilpv4-connector</container.image>
+    <container.version>${project.version}</container.version>
+  </properties>
+
   <build>
     <resources>
       <resource>
@@ -38,6 +43,35 @@
       </plugin>
 
       <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>1.7.0</version>
+        <executions>
+          <execution>
+            <!-- disabled by default. enabled by docker profiles -->
+            <phase>none</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <from>
+            <image>adoptopenjdk/openjdk11:alpine-jre</image>
+          </from>
+          <to>
+            <image>${container.image}:${container.version}</image>
+          </to>
+          <container>
+            <ports>
+              <port>8080</port>
+            </ports>
+            <useCurrentTimestamp>true</useCurrentTimestamp>
+          </container>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <configuration>
@@ -48,7 +82,6 @@
           </nonFilteredFileExtensions>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 
@@ -147,6 +180,18 @@
     <dependency>
       <groupId>io.github.resilience4j</groupId>
       <artifactId>resilience4j-circuitbreaker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_caffeine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_hotspot</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_servlet</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.annotation</groupId>
@@ -350,4 +395,41 @@
       <artifactId>assertj-core</artifactId>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>docker</id>
+      <!-- ship liquibase and postgres deps with docker image build -->
+      <dependencies>
+        <dependency>
+          <groupId>org.liquibase</groupId>
+          <artifactId>liquibase-core</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>package</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <container>
+                <jvmFlags>
+                  <jvmFlag>-server</jvmFlag>
+                  <jvmFlag>-Xverify:none</jvmFlag>
+                  <jvmFlag>-XX:TieredStopAtLevel=1</jvmFlag>
+                  <jvmFlag>-Dspring.profiles.default=dev</jvmFlag>
+                </jvmFlags>
+              </container>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
